Remove Bearer auth type and make swagger and tv path to be protected
